--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^3.5.1",
+    "@prismicio/client": "^7.1.0",
     "astro": "^2.7.2"
   }
 }
