--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/vercel": "^3.5.1",
     "@prismicio/client": "^7.1.0",
-    "astro": "^2.7.2"
+    "astro": "^2.7.2",
+    "astro-icon": "^0.8.1"
   }
 }
